# imguify

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/spotify/: api.rs  cache.rs  dbus.rs  mod.rs  player.rs
src/spotify/api/: cache.rs  mod.rs
src/ui/: mod.rs
src/ui/windows/: artist_window.rs  login_window.rs  main_window.rs  mod.rs  player_window.rs  playlist_window.rs  search_window.rs
