[package]
name = "imguify"
version = "0.1.0"
authors = ["RainbowCookie32 <matimoran03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
rand = "0.8.3"
glium = "0.29.1"
serde = "1.0.126"
dotenv = "0.15.0"
futures = "0.3.15"

zbus = "2.0.0-beta.3"
zvariant = "2.6.0"

imgui = "0.7.0"
imgui-winit-support = "0.7.1"
imgui-glium-renderer = "0.7.0"

[dependencies.tokio]
version = "1.6.1"
default-features = false
features = ["sync"]

[dependencies.rspotify]
version = "0.10.0"
features = ["blocking"]

[dependencies.librespot]
version = "0.2.0"

[dependencies.serde_any]
version = "0.5.0"
default-features = false
features = ["ron"]
