[package]
name = "imguify"
version = "0.1.0"
authors = ["RainbowCookie32 <matimoran03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
rand = "0.8.3"
glium = "0.30.2"
serde = "1.0.126"
anyhow = "1.0.44"
dotenv = "0.15.0"
futures = "0.3.15"

zbus = "1.9.1"
zvariant = "2.6.0"

keyring = "0.10.1"

imgui-winit-support = "0.8.0"
imgui-glium-renderer = "0.8.0"

librespot = { git = "https://github.com/RainbowCookie32/librespot" }

[dependencies.imgui]
version = "0.8.0"
features = ["tables-api"]

[dependencies.tokio]
version = "1.6.1"
default-features = false
features = ["sync"]

[dependencies.rspotify]
version = "0.10.0"
features = ["blocking"]

[dependencies.serde_any]
version = "0.5.0"
default-features = false
features = ["ron"]
